# apple_metal_sample_code

./: .gitattributes  .gitignore  LICENSE  README.md
Essentials/PerformingCalculationsOnAGPU/MetalComputeBasic.xcodeproj/: project.pbxproj
MetalFX/ApplyingTemporalAntialiasingAndUpscalingUsingMetalFX/: README.md
MetalFX/ApplyingTemporalAntialiasingAndUpscalingUsingMetalFX/Application/iOS/: AAPLAppDelegate.swift  AAPLViewController.swift
MetalFX/ApplyingTemporalAntialiasingAndUpscalingUsingMetalFX/Application/macOS/: AAPLAppDelegate.swift  AAPLViewController.swift
MetalFX/ApplyingTemporalAntialiasingAndUpscalingUsingMetalFX/MetalFXUpscaling.xcodeproj/: project.pbxproj
MetalFX/ApplyingTemporalAntialiasingAndUpscalingUsingMetalFX/Renderer/: AAPLMathUtilities.swift  AAPLRenderTarget.swift  AAPLRenderer.swift  AAPLRendererHelper.swift  ShaderTypes.h  Shaders.metal
MetalSampleCodeLibrary/ArgumentBuffers/EncodingArgumentBuffersOnTheGPU/: README.md
MetalSampleCodeLibrary/ArgumentBuffers/EncodingArgumentBuffersOnTheGPU/GPUArgumentBufferEncoding.xcodeproj/: project.pbxproj
MetalSampleCodeLibrary/ArgumentBuffers/EncodingArgumentBuffersOnTheGPU/LICENSE/: LICENSE.txt
MetalSampleCodeLibrary/ArgumentBuffers/ManagingGroupsOfResourcesWithArgumentBuffers/: README.md
MetalSampleCodeLibrary/ArgumentBuffers/ManagingGroupsOfResourcesWithArgumentBuffers/Application/: AAPLAppDelegate.h  AAPLAppDelegate.m  AAPLViewController.h  AAPLViewController.m  main.m
MetalSampleCodeLibrary/ArgumentBuffers/ManagingGroupsOfResourcesWithArgumentBuffers/BasicArgumentBuffers.xcodeproj/: project.pbxproj
MetalSampleCodeLibrary/ArgumentBuffers/ManagingGroupsOfResourcesWithArgumentBuffers/LICENSE/: LICENSE.txt
MetalSampleCodeLibrary/ArgumentBuffers/ManagingGroupsOfResourcesWithArgumentBuffers/Renderer/: AAPLRenderer.h  AAPLRenderer.mm  AAPLShaderTypes-Common.h  AAPLShaderTypes-Metal2.h  AAPLShaderTypes-Metal3.h  AAPLShaders.metal
MetalSampleCodeLibrary/ArgumentBuffers/RenderingTerrainDynamicallyWithArgumentBuffers/: README.md
MetalSampleCodeLibrary/ArgumentBuffers/RenderingTerrainDynamicallyWithArgumentBuffers/Application/: AAPLAppDelegate.mm  AAPLGameViewController.h  AAPLGameViewController.mm  main.m
MetalSampleCodeLibrary/ArgumentBuffers/RenderingTerrainDynamicallyWithArgumentBuffers/DynamicTerrainWithArgumentBuffers.xcodeproj/: project.pbxproj
MetalSampleCodeLibrary/ArgumentBuffers/RenderingTerrainDynamicallyWithArgumentBuffers/Renderer/: AAPLAllocator.h  AAPLAllocator.mm  AAPLCamera.h  (+27 more)
MetalSampleCodeLibrary/ComputeWorkflows/CustomizingAPyTorchOperation/: CustomSoftshrink.h  CustomSoftshrink.mm  README.md  compiler.py  run_sample.py  softshrink.py
MetalSampleCodeLibrary/ComputeWorkflows/CustomizingATensorFlowOperation/: README.md  render_utils.py  requirements.txt  tiny_nerf_hash.py  tiny_nerf_mlp.py
MetalSampleCodeLibrary/LightingTechniques/RenderingASceneWithDeferredLightingInCplusplus/: README.md
MetalSampleCodeLibrary/LightingTechniques/RenderingASceneWithDeferredLightingInObjectiveC/: README.md
MetalSampleCodeLibrary/LightingTechniques/RenderingASceneWithDeferredLightingInSwift/: README.md
MetalSampleCodeLibrary/LightingTechniques/RenderingASceneWithForwardPlusLightingUsingTileShaders/: .edtdefa  .edtdefr  README.md
MetalSampleCodeLibrary/LightingTechniques/RenderingReflectionsWithFewerRenderPasses/: README.md
MetalSampleCodeLibrary/MultipleTechniques/ModernRenderingWithMetal/: README.md
MetalSampleCodeLibrary/RayTracing/AcceleratingRayTracingAndMotionBlurUsingMetal/: README.md
MetalSampleCodeLibrary/RayTracing/AcceleratingRayTracingUsingMetal/: README.md
MetalSampleCodeLibrary/RayTracing/RenderingACurvePrimitiveInARayTracingScene/: README.md
MetalSampleCodeLibrary/RayTracing/RenderingReflectionsInRealTimeUsingRayTracing/: README.md
MetalSampleCodeLibrary/RenderWorkflows/AdjustingTheLevelOfDetailUsingMetalMeshShaders/: README.md
MetalSampleCodeLibrary/RenderWorkflows/CreatingA3DApplicationWithHydraRendering/: CMakeLists.txt  PreLoad.cmake  README.md
MetalSampleCodeLibrary/RenderWorkflows/CreatingA3DApplicationWithHydraRendering/Configuration/: xcodeBuildSettingOverrides.xcconfig
MetalSampleCodeLibrary/RenderWorkflows/CreatingA3DApplicationWithHydraRendering/source/: AAPLAppDelegate.h  AAPLAppDelegate.mm  AAPLCamera.h  AAPLCamera.mm  AAPLRenderer.h  AAPLRenderer.mm  AAPLViewController.h  AAPLViewController.mm  Info.plist  Info.plist.in  main.mm
MetalSampleCodeLibrary/RenderWorkflows/CreatingA3DApplicationWithHydraRendering/source/Base.lproj/: Main.storyboard
MetalSampleCodeLibrary/RenderWorkflows/CullingOccludedGeometryUsingTheVisibilityResultBuffer/: README.md
MetalSampleCodeLibrary/RenderWorkflows/ImplementingOrderIndependentTransparencyWithImageBlocks/: README.md
MetalSampleCodeLibrary/RenderWorkflows/ImprovingEdgeRenderingQualityWithMultisampleAntialiasingMSAA/: README.md
MetalSampleCodeLibrary/RenderWorkflows/LoadingTexturesAndModelsUsingMetalFastResourceLoading/: AAPLAppDelegate.h  AAPLAppDelegate.m  AAPLViewController.h  AAPLViewController.m  README.md  main.m
MetalSampleCodeLibrary/RenderWorkflows/UsingARenderPipelineToRenderPrimitives/: README.md
MetalSampleCodeLibrary/Shaders/UsingFunctionSpecializationToBuildPipelineVariants/: README.md
MetalSampleCodeLibrary/Synchronization/ImplementingAMultistageImageFilterUsingHeapsAndEvents/: .edtdefx  README.md
MetalSampleCodeLibrary/Synchronization/ImplementingAMultistageImageFilterUsingHeapsAndFences/: README.md
MetalSampleCodeLibrary/Textures/ReadingPixelDataFromADrawableTexture/: README.md
MetalSampleCodeLibrary/Textures/StreamingLargeImagesWithMetalSparseTextures/: README.md
Presentation/ReadingPixelDataFromADrawableTexture/Application/: AAPLViewController.h  main.m
Presentation/ReadingPixelDataFromADrawableTexture/Renderer/: AAPLImage.h  AAPLImage.m  AAPLRenderer.m  AAPLShaders.metal
RayTracing/AcceleratingRayTracingAndMotionBlurUsingMetal/Application/: ViewController.mm
RayTracing/AcceleratingRayTracingAndMotionBlurUsingMetal/Renderer/: Renderer.mm  Scene.h  ShaderTypes.h
(+540 files in other folders)
